Changelog
=========


1.0.2 (unreleased)
------------------

- Make intids work in tests (register IIntIds utility explicitely)
  [lgraf]


1.0.1 (2012-02-24)
------------------

- Added some French translations
  [ttschanz]

1.0 (2011-11-17)
----------------

- Fixed msg getter, it works now also with mails without a subject.
  [phgross]


1.0a11 (2011-10-04)
-------------------

- Fixing long subject headers separated by \n\t before creating email.message
  object.
  [lgraf]

- Added test to test mail creation with weird characters in subject.
  [lgraf]

- Normalizing subject before using it as an ID to create a mail object.
  [lgraf]

- Changed default encoding to 'utf-8' for the safe_utf8 method.
  Should fix decoding problem in mail subjects.
  Issue #1209 Falsche Umlaute bei importierten Mails
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1209
  [phgross]

1.0a10 (2011-09-27)
-------------------

- changed fallback encoding in the get_payload method for msg objects
  without a correct charset information. So we could fix display errors in mails
  with non-ascii characters in the mail body.
  [phgross]

- changed deprecated grok.CodeView to grok.View
  [eschmutz]

- added test-buildout for plone 4.1
  [eschmutz]


1.0a9 (2011-08-24)
------------------

- Fix tests
  [eschmutz]

- Implements Blob support, use now NamedBlobFiles instead of NamedFiles
  [phgross]

- Issue #1134 Test Gelb 2.0.3: Nicht korrekte Dateiendung beim Extrahieren eines Dokuments mit Umlaut aus Mail
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1134/
  added fallback in the get_filename method for allready decoded filenames tuple
  [phgross]


1.0a8
-----

- Fixed message value creation: filename must be in unicode, that it
  works with the new plone.namedfile 1.0.3
  [phgross]

- Added dummy setter for `title` property so it doesn't fail with an AttributeError
  when trying to set the title of a ftw.mail.mail object.
  [lgraf]
