@@ -5,6 +5,13 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
+- Inbound mail: Get recipient from env variable set by MTA, not from To header.
+  This allows for mails with multiple recipients in the To header, and the
+  Plone destination address doesn't need to be listed first anymore.
+  Issue #1312 Fehler E-Mail mit mehreren Adressaten
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1312/
+  [lgraf]
+
 - Make intids work in tests (register IIntIds utility explicitely)
   [lgraf]
 
